--- a/css/style.css
+++ b/css/style.css
@@ -615,6 +615,7 @@ button.btn-acc a {
 }
 .page-content ul.ansch-list li:before {
 	background: url(../images/ansch-list-icon.png) no-repeat;
+	background-size: 100% 100%;
 }
 ul.ansch-list {
     margin: 5em 0;
@@ -962,15 +963,13 @@ button.btn-uber {
     margin-right: 1.5em;
     padding: 45px 2.5em 25px;
 }
-.container-page-content .social-icon {
-    display: inline-block;
-    width: 19%;
-    margin-left: 15px;
-    vertical-align: 12px;
-}
 .container-page-content .social-icon img {
-    width: 44%;
+    width: 50px;
     margin-left: 10px;
+    height: 50px;
+    border-radius: 0;
+    margin-bottom: 30px;
+	left: 0;
 }
 button.btn-kontakt {
 	width: 325px;
@@ -1024,6 +1023,20 @@ button.btn-kontakt {
     height: 23px;
 	position: absolute;
     top: 7px;
+}
+.sub-detail.icon-email:before {
+	background: url(../images/icon-email.png) no-repeat;
+	background-size: 100% 100%;
+    width: 30px;
+    height: 30px;
+	vertical-align: -11px;
+}
+.sub-detail.icon-phone:before {
+	background: url(../images/icon-phone.png) no-repeat;
+	background-size: 100% 100%;
+    width: 30px;
+    height: 30px;
+	vertical-align: -11px;
 }
 .sub-detail span {
     width: 103%;
